3ano/2semestre/pl/aula7/listas/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Lista
Rule 1     Lista -> PA PF
Rule 2     Lista -> PA Elementos PF
Rule 3     Elementos -> Elemento
Rule 4     Elementos -> Elementos VIRG Elemento
Rule 5     Elemento -> alfanum
Rule 6     Elemento -> number

Terminals, with rules where they appear

PA                   : 1 2
PF                   : 1 2
VIRG                 : 4
alfanum              : 5
error                : 
number               : 6

Nonterminals, with rules where they appear

Elemento             : 3 4
Elementos            : 2 4
Lista                : 0

Parsing method: LALR

state 0

    (0) S' -> . Lista
    (1) Lista -> . PA PF
    (2) Lista -> . PA Elementos PF

    PA              shift and go to state 2

    Lista                          shift and go to state 1

state 1

    (0) S' -> Lista .



state 2

    (1) Lista -> PA . PF
    (2) Lista -> PA . Elementos PF
    (3) Elementos -> . Elemento
    (4) Elementos -> . Elementos VIRG Elemento
    (5) Elemento -> . alfanum
    (6) Elemento -> . number

    PF              shift and go to state 3
    alfanum         shift and go to state 6
    number          shift and go to state 7

    Elementos                      shift and go to state 4
    Elemento                       shift and go to state 5

state 3

    (1) Lista -> PA PF .

    $end            reduce using rule 1 (Lista -> PA PF .)


state 4

    (2) Lista -> PA Elementos . PF
    (4) Elementos -> Elementos . VIRG Elemento

    PF              shift and go to state 8
    VIRG            shift and go to state 9


state 5

    (3) Elementos -> Elemento .

    PF              reduce using rule 3 (Elementos -> Elemento .)
    VIRG            reduce using rule 3 (Elementos -> Elemento .)


state 6

    (5) Elemento -> alfanum .

    PF              reduce using rule 5 (Elemento -> alfanum .)
    VIRG            reduce using rule 5 (Elemento -> alfanum .)


state 7

    (6) Elemento -> number .

    PF              reduce using rule 6 (Elemento -> number .)
    VIRG            reduce using rule 6 (Elemento -> number .)


state 8

    (2) Lista -> PA Elementos PF .

    $end            reduce using rule 2 (Lista -> PA Elementos PF .)


state 9

    (4) Elementos -> Elementos VIRG . Elemento
    (5) Elemento -> . alfanum
    (6) Elemento -> . number

    alfanum         shift and go to state 6
    number          shift and go to state 7

    Elemento                       shift and go to state 10

state 10

    (4) Elementos -> Elementos VIRG Elemento .

    PF              reduce using rule 4 (Elementos -> Elementos VIRG Elemento .)
    VIRG            reduce using rule 4 (Elementos -> Elementos VIRG Elemento .)

